k80/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: chatapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend

        image: ghurka/chatapp-backend
        imagePullPolicy: Always

        ports:
        - containerPort: 5001
