k80/frontend-depolyment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-depolyment
  namespace: chatapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: chatapp-frontend
        image: ghurka/chatapp-fronted
        ports:
        - containerPort: 80
