k80/mongodb-depolyment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb-deployment
  namespace: chatapp

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: chatapp-mongodb
        image: mongo:latest

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db


      volumes:
      - name: mongodb-storage

        persistentVolumeClaim:
          claimName: mongodb-pvc
