k80/frontend-sevice.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: chatapp

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
