k80/mongodb-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: chatapp

spec:
  selector:
    app: mongodb

  ports:
  - port: 27017
    targetPort: 27017
