k80/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatapp-ingress
  namespace: chatapp

  labels:
    app.kubernetes.io/name: chatapp-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
  - host: chat-tws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5001
